Fix mobile horizontal scroll on TCCP card list

--- a/cfgov/unprocessed/css/enhancements/layout-base.scss
+++ b/cfgov/unprocessed/css/enhancements/layout-base.scss
@@ -100,6 +100,11 @@
     }
   }
 
+  // Modifier to allow breadcrumbs on full-width layouts, as in TCCP
+  .u-layout-grid--full-width-breadcrumbs {
+    overflow-x: hidden;
+  }
+
   // Set default line width.
   .u-layout-grid__main,
   .u-layout-grid__content-intro {
